syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

// The greeting service definition.
service Greeter {
    // Unary
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    // server streaming
    rpc SayHi (HelloRequest) returns (stream HelloReply) {}
    // client streaming
    rpc SayBala (stream HelloRequest) returns (HelloReply) {}
    // bidirectional streaming
    rpc Discuss (stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}